nginx-deplyoment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-project
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-project
  template:
    metadata:
      labels:
        app: nginx-project
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
